fixed mobile landscape mode issues

--- a/src/App.css
+++ b/src/App.css
@@ -1101,9 +1101,9 @@ flex-direction: column;
     width: fit-content;
     padding: 20px;
   }
-  .topbtn{
-    /* right: 200px; */
-  }
+  /* .topbtn{
+    right: 200px;
+  } */
 }
 
 
