--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@
   
 }
 html{
+  
   scroll-behavior: smooth;
   margin: 0;
   font-size:100%;
@@ -357,10 +358,8 @@ flex-direction: column;
     var(--stroke-color);
     
 
-
 }
 .name {
-  /* border: 2px solid white; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -378,7 +377,7 @@ flex-direction: column;
   width: 100%;
   text-align: center;
   /* flex-direction: column; */
-  position: relative;
+  /* position: relative; */
   font-family: 'MuseoModerno', cursive;
   /* font-family: 'Outfit', sans-serif; */
   /* animation: name 3s 1; */
@@ -933,20 +932,15 @@ flex-direction: column;
   /* margin-top: 0px; */
   margin-right: 40px;
   font-size: 45px;
-
-}
-.hello a{
-  text-decoration: none;
-  color:#00C6B8;
-  display: inline-block;
   transition: all .5s;
-  
 }
-.hello a:hover{
+.hello:hover{
   animation-name: shakey;
   animation-duration: 8s;
   animation-iteration-count: infinite;
 }
+
+
 @keyframes shakey {
 	0%, 100% {transform: translateY(0);}
 	10%, 30%, 50%, 70%, 90% {transform: translateX(-15px);}
@@ -1024,7 +1018,7 @@ flex-direction: column;
   font-size: 50px;
 }
 }
-@media only screen and (max-height:450px){
+@media only screen and (max-height:650px){
   label li{
     font-size: 40px;
     height: 100px;
@@ -1046,6 +1040,9 @@ flex-direction: column;
   }
   .logo img{
     margin-left: 10px;
+  }
+  .content-main{
+    padding: 50px;
   }
 }
 @media only screen and (max-width:950px){
