--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,11 @@ body {
   flex-direction: column;
   padding: 0;
   position: relative;
+  /* background: url(oooscillate.svg); */
+  /* background: url(bbblurry1.svg); */
+  background-repeat: no-repeat;
+  background-color: #0C1821;
+
 
 }
 
@@ -318,11 +323,13 @@ flex-direction: column;
   position: fixed;
   width: 35%;
   height: auto;
-  bottom: 40%;
-  right: 5%;
+  bottom: 30%;
+  right: 8%;
   animation: name 4s 1;
+  z-index: -1;
 
 }
+
 
 
 #Name{
@@ -369,7 +376,8 @@ flex-direction: column;
   /* background: URL(007.png); */
 
   /* background:#0c1821; */
-  background:rgb(13, 24, 33);
+  background: URl(bbblurry.svg);
+  /* background:rgb(13, 24, 33); */
   background-size: cover;
   top:0%;
   bottom: 0%;
@@ -540,8 +548,8 @@ flex-direction: column;
 
 
 .content-main{
-  /* background: url(wp2757874.gif); */
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='250' preserveAspectRatio='none' viewBox='0 0 1440 250'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1006%26quot%3b)' fill='none'%3e%3crect width='1440' height='250' x='0' y='0' fill='rgba(12%2c 24%2c 33%2c 1)'%3e%3c/rect%3e%3cpath d='M4 250L254 0L569 0L319 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1007%26quot%3b)'%3e%3c/path%3e%3cpath d='M242.60000000000002 250L492.6 0L789.6 0L539.6 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1007%26quot%3b)'%3e%3c/path%3e%3cpath d='M487.20000000000005 250L737.2 0L1020.7 0L770.7 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1007%26quot%3b)'%3e%3c/path%3e%3cpath d='M743.8000000000001 250L993.8000000000001 0L1310.3000000000002 0L1060.3000000000002 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1007%26quot%3b)'%3e%3c/path%3e%3cpath d='M1430 250L1180 0L1036 0L1286 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1008%26quot%3b)'%3e%3c/path%3e%3cpath d='M1191.4 250L941.4000000000001 0L884.4000000000001 0L1134.4 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1008%26quot%3b)'%3e%3c/path%3e%3cpath d='M932.8 250L682.8 0L489.29999999999995 0L739.3 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1008%26quot%3b)'%3e%3c/path%3e%3cpath d='M721.1999999999999 250L471.19999999999993 0L336.19999999999993 0L586.1999999999999 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1008%26quot%3b)'%3e%3c/path%3e%3cpath d='M1281.8207754636592 250L1440 91.82077546365923L1440 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1007%26quot%3b)'%3e%3c/path%3e%3cpath d='M0 250L158.17922453634077 250L 0 91.82077546365923z' fill='url(%26quot%3b%23SvgjsLinearGradient1008%26quot%3b)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1006'%3e%3crect width='1440' height='250' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='0%25' y1='100%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1007'%3e%3cstop stop-color='rgba(0%2c 198%2c 184%2c 0.19)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(0%2c 198%2c 184%2c 0.19)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='100%25' y1='100%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1008'%3e%3cstop stop-color='rgba(0%2c 198%2c 184%2c 0.19)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(0%2c 198%2c 184%2c 0.19)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
+  background: url(oooscillate.svg);
+  /* background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='250' preserveAspectRatio='none' viewBox='0 0 1440 250'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1006%26quot%3b)' fill='none'%3e%3crect width='1440' height='250' x='0' y='0' fill='rgba(12%2c 24%2c 33%2c 1)'%3e%3c/rect%3e%3cpath d='M4 250L254 0L569 0L319 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1007%26quot%3b)'%3e%3c/path%3e%3cpath d='M242.60000000000002 250L492.6 0L789.6 0L539.6 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1007%26quot%3b)'%3e%3c/path%3e%3cpath d='M487.20000000000005 250L737.2 0L1020.7 0L770.7 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1007%26quot%3b)'%3e%3c/path%3e%3cpath d='M743.8000000000001 250L993.8000000000001 0L1310.3000000000002 0L1060.3000000000002 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1007%26quot%3b)'%3e%3c/path%3e%3cpath d='M1430 250L1180 0L1036 0L1286 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1008%26quot%3b)'%3e%3c/path%3e%3cpath d='M1191.4 250L941.4000000000001 0L884.4000000000001 0L1134.4 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1008%26quot%3b)'%3e%3c/path%3e%3cpath d='M932.8 250L682.8 0L489.29999999999995 0L739.3 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1008%26quot%3b)'%3e%3c/path%3e%3cpath d='M721.1999999999999 250L471.19999999999993 0L336.19999999999993 0L586.1999999999999 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1008%26quot%3b)'%3e%3c/path%3e%3cpath d='M1281.8207754636592 250L1440 91.82077546365923L1440 250z' fill='url(%26quot%3b%23SvgjsLinearGradient1007%26quot%3b)'%3e%3c/path%3e%3cpath d='M0 250L158.17922453634077 250L 0 91.82077546365923z' fill='url(%26quot%3b%23SvgjsLinearGradient1008%26quot%3b)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1006'%3e%3crect width='1440' height='250' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='0%25' y1='100%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1007'%3e%3cstop stop-color='rgba(0%2c 198%2c 184%2c 0.19)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(0%2c 198%2c 184%2c 0.19)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='100%25' y1='100%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1008'%3e%3cstop stop-color='rgba(0%2c 198%2c 184%2c 0.19)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(0%2c 198%2c 184%2c 0.19)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e"); */
 
   background-position: center;
   background-size: cover;
@@ -556,6 +564,9 @@ flex-direction: column;
   padding-top: 60px ;
   /* padding-right: 60px ; */
   top: 0%;
+  z-index: 1;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
   
 }
 .About{
@@ -674,7 +685,7 @@ flex-direction: column;
   /* animation: icons 5s infinite; */
 }
 .griditem:hover{
-  transform: scale(1.2);
+  transform: scale(1);
   border: 0.01px solid #00c6b9 ;
   filter: blur(5);
   box-shadow: #000000 0px 0px 30px;
@@ -745,10 +756,17 @@ flex-direction: column;
 .projects{
   display:grid;
   grid-template-rows: auto auto auto;
-  gap: 50px;
+  gap: 100px;
   place-items: center;
   padding: 20px;
   scroll-snap-type: y mandatory;
+}
+.projectimg{
+  display: grid;
+  grid-template-rows: auto auto auto;
+  grid-template-columns: auto auto;
+  height: auto;
+  width: auto;
 }
 .project1{
   /* background: url(bg2.png); */
@@ -762,16 +780,18 @@ flex-direction: column;
   align-items: center;
   text-align: justify;
   border-radius: 20px;
-  border: 2px solid white;
+  /* border: 2px solid white; */
   scroll-snap-align: center;
   z-index: 1;
   transition: all ease 1s;
 }
  .project1 img{
-  height: auto;
+  height: 400px;
   width: 500px;
-  border-radius: 20px;
+  border-radius: 60px;
   /* box-shadow: 1px 1px 20px #d3d3d3; */
+  padding: 40px;
+  object-fit: cover;
  }
 
 
@@ -789,13 +809,14 @@ flex-direction: column;
   align-items: center;
   display: flex;
   flex-direction: column ;
- margin: 20px;
+ /* margin: 20px; */
  font-family: 'MuseoModerno', cursive;
  font-weight: 800;
+ padding: 25px;
  }
 .p1info button{
   font-family: 'MuseoModerno', cursive;
-  height: 45px;
+  /* height: 45px; */
     margin: 25px;
     /* border-radius:20px; */
     border:2px solid #202334;
@@ -834,15 +855,15 @@ flex-direction: column;
   /* background-color: #00C6B8; */
   transition: all 15s ease-in;
   border-radius: 20px;
-  box-shadow: #0c1821 1px 1px 20px ;
+  /* box-shadow: #0c1821 1px 1px 20px ; */
   
 
 }
 
 .project1:hover{
-  /* transform:scale(1.3); */
+  transform:scale(1);
   box-shadow: #0c1821 0px 0px 70px ;
-  border-radius: 20px;
+  /* border-radius: 20px; */
 
 }
 .contact-main{
@@ -1074,7 +1095,7 @@ flex-direction: column;
     width: 500px;
   }
   .p1info{
-    position: absolute;
+    /* position: absolute; */
     width: fit-content;
   }
   .links{
@@ -1129,20 +1150,18 @@ flex-direction: column;
   }
   .project1 img{
     height: fit-content;
-    width: 350px;
+    width: fit-content;
   }
   .project1{
-    height: 100%;
-    width: 100%;
+    height: fit-content;
+    width: fit-content;
+    margin: 20px;
   }
-  .project1:hover{
-    height: 85%;
-    width: 85%;
-  }
+  
   .p1info{
     height: 100%;
     width: 100%;
-    position: absolute;
+    /* position: absolute; */
     font-size: 12px;
   }
   
@@ -1327,11 +1346,15 @@ font-size: 20px;
   height: 100vh;
 
   }label ul{
-    top: 10%;
+    /* top: 10%; */
+    animation: none;
     left: 45%;
   }
   label input:checked + .menu{
     box-shadow: 0 0 0 100vh #00C6B8, 0 0 0 400px #00C6B8;
+  }
+  label input:checked + .menu + ul{
+    animation: none;
   }
 #Name{position: relative;
   top: -24%;
@@ -1376,6 +1399,26 @@ font-size: 20px;
 .griditem{
   height: fit-content;
   width: fit-content;
+  gap: 100px;
+}
+.project1{
+  /* background: rgb(0, 199, 186); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: #0c1821 0px 0px 40px ;
+
+}
+.project1 img{
+  /* display: none; */
+  padding: 10px;
+}
+.projects{
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  flex-direction: column;
 }
 }
 
